Prevent horizontal scrolling on body

--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,7 @@ ul {
 body {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 
     /*
     background-size: 1600px;
